Added delegate API
